# NonLinearSystemNeuralNetworkFMU.jl

./: .gitignore  .gitmodules  LICENSE.md  Manifest.toml  Project.toml  README.md  eq_1403_out.bson
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: base-tests-linux.yml  base-tests-windows.yml  base-tests.yml  documentation.yml  example-IEEE14.yml  example-scalable-translation.yml  example-simple-loop-proximity.yml  example-simple-loop.yml
dev/: index.html  search_index.js
dev/dataGen/: index.html
dev/integrateONNX/: index.html
dev/main/: index.html
dev/profiling/: index.html
dev/search/: index.html
dev/train/: index.html
docs/: Manifest.toml  Project.toml  README.md  make.jl
docs/src/: dataGen.md  index.md  integrateONNX.md  main.md  profiling.md  train.md
example/: .gitignore  ScalableTranslationStatistics.ipynb  ScalableTranslationStatistics.jl
example/Furnace/: Furnace.mo
example/ScalableTranslationStatistics/: .gitignore  ScalableTranslationStatistics.jl
example/SoftStarter/: SoftStarter.jl  SoftStarter.mo
examples/: genPlots.jl
examples/Furnace/: .gitignore  Furnace.jl  trainTensorFlow.ipynb  trainTensorFlow.py
examples/IEEE14/: .gitignore  IEEE_14_Buses.jl  IEEE_14_Buses.mo  Manifest.toml  Project.toml  README.md  requirements.txt
examples/IEEE14/scripts/: clusterData.jl  clusterData.py  customLayerFlux.jl  genAllData.jl  openipsl.mos  parseModelfile.jl  testjacobian.jl  trainFlux.jl  trainGp.py  trainKeras.py  trainResidualFlux.jl  trainTensorflow.jl  trainUnsupervisedFlux.jl  trainUnsupervisedSL.jl  trainXGBoost.py
examples/IEEE14/scripts/otherTrainingVariants/: HyperparamSearch.py  NeuralNet.py  ResidualNet.py  Surr.jl  XGBoost.py  ensembleNet.py  gaussianProcess.py  sequential.onnx  utils.py
examples/IEEE14/scripts/simpleLoopVariants/: IEEE14Unsupervised.jl  IEEE14toONNX.jl  dataGenTime.jl  hypertune.jl  loss_new.jl  rec.jl  simpleLoopNB.ipynb  t.jl  trainAll.jl  trainSemiSupervised.jl  trainSupervised.jl  trainTwoStep.jl  trainUnsupervised.jl  utils.jl
examples/IEEE14/src/: IEEE_14_Buses.mo  train.jl  train.py
examples/IEEE14_proximity/: Manifest.toml  Project.toml  README.md
examples/IEEE14_proximity/scripts/: runAll.jl
examples/IEEE14_proximity/src/: convertProximityData.jl  genAllData.jl  plotSimResults.jl  plotStuff.jl  simulateFMU.jl  trainFlux.jl
examples/JetPump/: Manifest.toml  Project.toml  README.md
examples/JetPump/models/: JetPumpInverse.mo  Scenario_01.mo
examples/JetPump/scripts/: genAllData.jl  simSurrogate.jl  trainSurrogate.jl
examples/JetPump/src/: JetPumpForward.mo  Scenario_01.mo  Scenario_01_flat.mo  Scenario_01_flat_resolved.mo  flatten.jl  referenceSolution.csv  replaceSurrogate.jl  symbolicRegression.jl
examples/ScalableTranslationStatistics/: .gitignore  Manifest.toml  Project.toml  README.md  ScalableTranslationStatistics.jl  genPlots.jl  simTimes.csv
examples/ScalableTranslationStatistics/scripts/: ScalableTranslationStatistics.jl  genAllPlots.jl  genAllSurrogates.jl  plotSimTimeOverview.jl  plotTrainData.jl  runAll.jl  runall.jl  simulateSurrogates.jl
examples/ScalableTranslationStatistics/src/: genSurrogates.jl  plotResult.jl  simulateFMU.jl  stuff.jl  util.jl
examples/SimpleLoop/: Manifest.toml  Project.toml  README.md
examples/SimpleLoop/scripts/: SimpleLoop_dataGenPlots.jl  SimpleLoop_example.jl  SimpleLoop_intersection.jl  SimpleLoop_jacobian.jl  SimpleLoop_simresults.jl  runall.jl  trainUnsupervised.jl
examples/SimpleLoop/src/: isRight.jl  plotData.jl  runall.jl  simpleLoop.mo
examples/SimpleLoop/test/: runtests.jl
examples/SimpleLoop_ActiveLearning/: Manifest.toml  Project.toml  README.md
examples/SimpleLoop_ActiveLearning/scripts/: plot.py  runAll.jl  wholeList.csv
examples/SimpleLoop_ActiveLearning/scripts/runs/: run_1000_0.0.jl  run_1000_0.25.jl  run_1000_0.5.jl  run_1000_0.75.jl  run_1000_1.0.jl  run_1200_0.0.jl  run_1200_0.25.jl  run_1200_0.5.jl  run_1200_0.75.jl  run_1200_1.0.jl  run_1400_0.0.jl  run_1400_0.25.jl  run_1400_0.5.jl  run_1400_0.75.jl  run_1400_1.0.jl  run_600_0.0.jl  run_600_0.25.jl  run_600_0.5.jl  run_600_0.75.jl  run_600_1.0.jl  run_800_0.0.jl  run_800_0.25.jl  run_800_0.5.jl  run_800_0.75.jl  run_800_1.0.jl  runner.sh
examples/SimpleLoop_ActiveLearning/src/: activeLearn.jl  main.jl  simpleLoop.mo  simulateFMU.jl
examples/SimpleLoop_proximity/: Manifest.toml  Project.toml  README.md
examples/SimpleLoop_proximity/scripts/: runAll.jl
examples/SimpleLoop_proximity/src/: convertProximityData.jl  genAllData.jl  plotStuff.jl  simulateFMU.jl  trainFlux.jl
examples/SoftStarter/: .gitignore  SoftStarter.jl
ext/: PlottingMakieExt.jl
src/: NonLinearSystemNeuralNetworkFMU.jl  fmiExtensions.jl  genFMUs.jl  genTrainData.jl  integrateNN.jl  main.jl  profiling.jl  types.jl  util.jl
src/onnxWrapper/: CMakeLists.txt  errorControl.c  errorControl.h  measureTimes.c  measureTimes.h  onnxWrapper.c  onnxWrapper.h
src/templates/: special_interface.tpl.c  special_interface.tpl.h
test/: .gitignore  Manifest.toml  Project.toml  genDataTest.jl  genFmusTest.jl  gen_fmus_test.jl  includeOnnxTest.jl  mainTest.jl  profilingTests.jl  profiling_tests.jl  runtests.jl  simpleLoop.mo  trainNNTest.jl
test/refOnnx/: simpleLoop.onnx
v0.5.6/: index.html
v0.5.6/dataGen/: index.html
v0.5.6/integrateONNX/: index.html
v0.5.6/main/: index.html
v0.5.6/profiling/: index.html
v0.5.6/search/: index.html
v0.5.6/train/: index.html
